# PulseForge

./: CLAUDE.md  README.md  SPEC.md  dev  main.py  package.json  pyproject.toml  requirements.txt
core/: engine.py  models.py
inputs/: wav_producer.py
outputs/: audio_consumer.py  tui_display.py  visualizers.py
styles/: theme.tcss
tests/: conftest.py  test_engine.py  test_models.py  test_wav_producer.py
